--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.11.0",
     "@google-cloud/storage": "^7.14.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "uuid": "^11.0.3"
   },
