--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/nurfianqodar/dicoding-submission-mlgc#readme",
   "description": "",
+  "module": "module",
   "dependencies": {
     "@google-cloud/firestore": "^7.11.0",
     "@google-cloud/storage": "^7.14.0",
