--- a/package.json
+++ b/package.json
@@ -21,20 +21,23 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.11.0",
     "@google-cloud/storage": "^7.14.0",
-    "@tensorflow/tfjs-node": "^4.22.0",
+    "@tensorflow/tfjs-node": "3.21.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jimp": "^1.6.0",
     "multer": "^1.4.5-lts.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "@types/express": "^5.0.0",
+    "@types/jimp": "^0.2.1",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.1",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.4.2"
   }
 }
